@@ -19,7 +19,7 @@
 // FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
 // DEALINGS IN THE SOFTWARE.
 
-// $Id: Keys.hh,v 1.22 2003/04/15 00:50:24 rathnor Exp $
+// $Id: Keys.hh,v 1.23 2003/04/20 12:21:35 rathnor Exp $
 
 #ifndef KEYS_HH
 #define KEYS_HH
@@ -52,6 +52,7 @@ public:
         KILLWINDOW, NEXTWINDOW,	PREVWINDOW,
         NEXTTAB, PREVTAB, FIRSTTAB, LASTTAB, MOVETABPREV, MOVETABNEXT,
         ATTACHLAST, DETACHCLIENT,
+        FOCUSUP, FOCUSDOWN, FOCUSLEFT, FOCUSRIGHT,
         SHADE, MAXIMIZE, 
         STICK,       // Make Sticky
         EXECUTE,	// Run command
